add tic tac tou functionality

--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
 :root {
     --main-color: #00F5FF;
-    --wining-color: #000000;
-    --bg-color: #303131;
+    --winning-color: #333333;
+    --bg-color: #313131;
 
 }
 
